# rag

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  start_poetry.sh
config/: cfg.py  logger.py
core/: database.py  text_extractor.py  util_functions.py
