[tool.poetry]
name = "rag"
version = "0.1.0"
description = ""
authors = ["Luca Iorio <l.iorio@reply.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.41.1"
langchain-community = "^0.3.14"
openai = "^1.59.8"
nltk = "^3.9.1"
tiktoken = "^0.8.0"
pdfplumber = "^0.11.5"
pymongo = "^4.10.1"
langchain = "^0.3.14"
coloredlogs = "^15.0.1"
langchain-openai = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
